feat: add throw prefix (0xFE) sub-opcode decoding and fix encoding test
- Add 10 throw sub-opcodes (0x00-0x09) with correct formats
- Move throw handling before switch in InstructionHandler to avoid
  sub-opcode collision with LDUNDEFINED (0x00)
- Fix test byte arrays to include throw sub-opcode byte
- Fix RealHapDecompilationTest encoding for non-UTF-8 characters

Co-Authored-By: Claude Opus 4.7 <noreply@anthropic.com>